--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,13 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 7.0.x
+          dotnet-version: 8.0.x
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore .net-main/AccessControl.csproj
 
       - name: Build
-        run: dotnet build --no-restore --configuration Release
+        run: dotnet build .net-main/AccessControl.csproj --no-restore --configuration Release
 
       - name: Run Tests
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test AccessControl.Tests/AccessControl.Tests.csproj --no-build --verbosity normal
