--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
         run: dotnet build .net-main/AccessControl.csproj --no-restore --configuration Release
 
       - name: Run Tests
-        run: dotnet test Tests/AccessControl.Tests.csproj --no-build --verbosity normal
+        run: dotnet test Tests/Tests.csproj --no-build --verbosity normal
